# meddicc-fse

./: README.md  pyproject.toml
api/: .env.example  requirements.txt
api/apps/: urls.py
api/apps/authentication/: serializers.py  urls.py  views.py
api/apps/tasks/: filters.py  models.py  serializers.py  urls.py  views.py
api/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_completed_date.py
api/apps/tasks/tests/: factories.py  test_filters.py  test_models.py  test_serializers.py  test_views.py
api/apps/users/: admin.py  models.py  serializers.py
api/apps/users/migrations/: 0001_initial.py
api/apps/users/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
api/config/settings/: base.py
app/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: main.tsx  routeTree.gen.ts
app/src/features/auth/api/: post-login.ts
app/src/features/auth/components/: login-form.tsx
app/src/features/auth/types/: auth.ts
app/src/features/tasks/api/: complete-task.ts  delete-task.ts  get-tasks.ts  post-task.ts
app/src/features/tasks/components/: tasks-filter.tsx  tasks-list.tsx
app/src/features/tasks/types/: tasks.ts
app/src/lib/: api-client.ts  auth.ts
app/src/routes/: __root.tsx  create-task.lazy.tsx  index.lazy.tsx  index.tsx  logout.lazy.tsx
